# hl2_goap_bot

./: .gitignore  .project  CMakeLists.txt  MMSPlugin.cpp  MMSPlugin.h  README.md  VSPlugin.cpp  VSPlugin.h  dods_debug.sh  hl2mp_debug.sh
.github/workflows/: build.yml  cmake.yml  create-release.yml  github-actions.yml
addons/: my_bot.vdf
bot/: CMakeLists.txt  Client.cpp  PluginAdaptor.cpp  PluginAdaptor.h  Thinker.h
bot/event/: CMakeLists.txt  EventHandler.cpp  EventHandler.h  EventInfo.h
bot/goap/: AStar.cpp  AStar.h  CMakeLists.txt  GoalManager.cpp  GoalManager.h  Planner.cpp  Planner.h  WorldCond.h
bot/goap/action/: Action.h  AttackAction.cpp  AttackAction.h  CMakeLists.txt  DestroyObjectAction.cpp  DestroyObjectAction.h  FindCoverAction.cpp  FindCoverAction.h  FindCoverAction.h.orig  FindCoverFromGrenadesAction.cpp  FindCoverFromGrenadesAction.h  FindPathAction.cpp  FindPathAction.h  GetItemAction.cpp  GetItemAction.h  GoToAction.cpp  GoToAction.h  GoToConsumableEntityAction.cpp  GoToConsumableEntityAction.h  GoToEntityAction.cpp  GoToEntityAction.h  GoToEntityWithGivenNameAction.cpp  GoToEntityWithGivenNameAction.h  GoToItemAction.cpp  GoToItemAction.h  GotoAction.cpp  KillAction.cpp  KillAction.h  ReloadWeaponAction.cpp  ReloadWeaponAction.h  SnipeAction.cpp  SnipeAction.h  SwitchToBestLoadedWeaponAction.cpp  SwitchToBestLoadedWeaponAction.h  SwitchToDesiredWeaponAction.cpp  SwitchToDesiredWeaponAction.h  SwitchWeaponAction.cpp  SwitchWeaponAction.h  ThrowGrenadeAction.cpp  ThrowGrenadeAction.h  (+4 more)
bot/mods/: CMakeLists.txt
bot/mods/dod/goap/action/: CMakeLists.txt  CapturePointAction.cpp  CapturePointAction.h  DODBombTargetAction.cpp  DODBombTargetAction.h  DODDefendPointAction.cpp  DODDefendPointAction.h  DODDefuseBombAction.cpp  DODDefuseBombAction.h  DODPickUpGrenadeAction.cpp  DODPickUpGrenadeAction.h  DODThrowLiveGrenadeAction.cpp  DODThrowLiveGrenadeAction.h  DODUseFragGrenadeAction.cpp  DODUseFragGrenadeAction.h  (+8 more)
bot/mods/dod/player/: CMakeLists.txt  DODBotBuilder.cpp  DODBotBuilder.h  DODObjective.cpp  DODObjective.h  DODObjectives.cpp  DODObjectives.h  DODWorld.cpp  DODWorld.h
bot/mods/dod/util/: CMakeLists.txt  DODBombTarget.h  DODObjectiveResource.cpp  DODObjectiveResource.h  DODPlayer.h  DodPlayer.h
bot/mods/dod/voice/: DODVoiceMessage.h
bot/mods/dod/weapon/: CMakeLists.txt  DODArsenalBuilder.cpp  DODArsenalBuilder.h  DODAssaultRifleBuilder.cpp  DODAssaultRifleBuilder.h  DODFragGrenadeFunction.cpp  DODFragGrenadeFunction.h  DODLiveGrenadeBuilder.h  DODMGBuilder.cpp  DODMGBuilder.h  DODMGDeployer.cpp  DODMGDeployer.h  DODMGDeployerDeployState.cpp  DODMGDeployerDeployState.h  DODMGDeployerProneState.cpp  DODMGDeployerProneState.h  DODMGDeployerStandState.cpp  DODMGDeployerStandState.h  DODMGDeployerStartState.cpp  DODMGDeployerStartState.h  DODMGDeployerState.h  DODMGReloader.cpp  DODMGReloader.h  DODSMGBuilder.cpp  DODSMGBuilder.h
bot/mods/hl2dm/player/: CMakeLists.txt  HL2DMBotBuilder.cpp  HL2DMBotBuilder.h  HL2DMWorld.cpp  HL2DMWorld.h
bot/mods/hl2dm/util/: HL2MPPlayer.h
bot/mods/hl2dm/weapon/: AR2Builder.cpp  AR2Builder.h  CMakeLists.txt  CrossbowBuilder.cpp  CrossbowBuilder.h  GravityGunBuilder.cpp  GravityGunBuilder.h  HL2DMArsenalBuilder.cpp  HL2DMArsenalBuilder.h  MagnumBuilder.cpp  MagnumBuilder.h  SMGBuilder.cpp  SMGBuilder.h  ShotgunFunction.cpp  ShotgunFunction.h
bot/move/: Avoid.cpp  Avoid.h  CMakeLists.txt  Jump.cpp  Jump.h  MoveLadder.cpp  MoveLadder.h  MoveState.cpp  MoveState.h  MoveStateContext.cpp  MoveStateContext.h  MoveTraceFilter.cpp  MoveTraceFilter.h  NavMeshPathBuilder.cpp  NavMeshPathBuilder.h  NavMeshPathBuilderWithGoal.cpp  NavMeshPathBuilderWithGoal.h  Navigator.cpp  Navigator.h  RotationManager.cpp  RotationManager.h  Route.cpp  Route.h  StepBack.cpp  StepBack.h  StepLeft.cpp  StepLeft.h  StepRight.cpp  StepRight.h  Stopped.cpp  Stopped.h
bot/player/: Blackboard.cpp  Blackboard.h  Bot.cpp  Bot.h  BotBuilder.cpp  BotBuilder.h  Button.cpp  Button.h  Buttons.cpp  Buttons.h  CMakeLists.txt  CommandHandler.h  FilterSelfAndEnemies.cpp  FilterSelfAndEnemies.h  GameEventListener.cpp  GameEventListener.h  GameManager.h  HidingSpotSelector.cpp  HidingSpotSelector.h  ObjectManager.h  Player.cpp  Player.h  PlayerManager.cpp  PlayerManager.h  VTableHook.cpp  VTableHook.h  ViewFinder.cpp  ViewFinder.h  Vision.cpp  Vision.h  World.cpp  World.h
bot/util/: BaseCombatWeapon.cpp  BaseCombatWeapon.h  BaseGrenade.h  CMakeLists.txt
bot/voice/: AffirmativeVoiceMessage.h  AreaClearVoiceMessage.cpp  AreaClearVoiceMessage.h  CMakeLists.txt  GrenadeVoiceMessage.h  NeedBackupVoiceMessage.cpp  NeedBackupVoiceMessage.h  VoiceMessage.h  VoiceMessageSender.cpp  VoiceMessageSender.h
bot/weapon/: Armory.cpp  Armory.h  Arsenal.cpp  Arsenal.h  ArsenalBuilder.h  CMakeLists.txt  DeployableWeaponBuilder.cpp  DeployableWeaponBuilder.h  Deployer.cpp  Deployer.h  FullAutoGunBuilder.cpp  FullAutoGunBuilder.h  GrenadeBuilder.cpp  GrenadeBuilder.h  GrenadeLauncherFunction.cpp  GrenadeLauncherFunction.h  MeleeWeaponBuilder.cpp  MeleeWeaponBuilder.h  PistolBuilder.cpp  PistolBuilder.h  RPGBuilder.cpp  RPGBuilder.h  ReloadableWeaponBuilder.h  Reloader.cpp  Reloader.h  SemiAutoBuilder.cpp  SemiAutoBuilder.h  SimpleWeaponBuilder.h  UtilityToolBuilder.cpp  UtilityToolBuilder.h  Weapon.cpp  Weapon.h  WeaponActor.h  WeaponBuilder.h  WeaponBuilderFactory.cpp  WeaponBuilderFactory.h  WeaponFunction.cpp  WeaponFunction.h
navmesh/: nav.h  nav_area.cpp  nav_area.h  nav_edit.cpp  nav_entities.cpp  nav_entities.cpp~RF14117499.TMP  nav_entities.h  nav_file.cpp  nav_generate.cpp  nav_ladder.cpp  nav_mesh.cpp  nav_mesh.h  nav_node.cpp  nav_pathfind.h
test/: CMakeLists.txt  ValveSDKTest.cpp  ValveSDKTest.h
test/goap/: CMakeLists.txt  PlannerTest.cpp  PlannerTest.h
test/move/: CMakeLists.txt  RotationManagerTest.cpp  RotationManagerTest.h  StubbedCVar.h
util/: BaseCombatWeapon.cpp  BaseCombatWeapon.h  BasePlayer.h  CMakeLists.txt  EntityInstance.h  EntityUtils.cpp  EntityUtils.h  EntityVar.cpp  UtilTrace.cpp  UtilTrace.h  beta_distribution.h
(+20 files in other folders)
