add_library(goap_actions GoToAction.cpp KillAction.cpp FindCoverAction.cpp ThrowGrenadeAction.cpp
 GoToEntityAction.cpp AttackAction.cpp ReloadWeaponAction.cpp SnipeAction.cpp SwitchWeaponAction.cpp 
 SwitchToDesiredWeaponAction.cpp UseSpecificWeaponAction.cpp GoToEntityWithGivenNameAction.cpp FindCoverFromGrenadesAction.cpp)
